<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="seriesListEntityViewModel"
            type="com.example.seriestracker.addSeriesListEntity.AddSeriesListEntityViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addSeriesFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_title_add"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/addSeriesEnterTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/addSeriesEnterTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/card_edit_title"
            android:inputType="textPersonName"
            android:labelFor="@id/addSeriesFragmentTitle"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/addSeriesEnterExtras"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addSeriesFragmentTitle" />

        <EditText
            android:id="@+id/addSeriesEnterExtras"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/card_edit_extras"
            android:inputType="textPersonName"
            android:labelFor="@id/editSeriesEnterExtras"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/addSeriesListingTypeHolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addSeriesEnterTitle" />

        <TextView
            android:id="@+id/addSeriesListingTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/card_edit_listingType"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/addSeriesListingTypeHolder"
            app:layout_constraintEnd_toStartOf="@+id/addSeriesListingTypeHolder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addSeriesListingTypeHolder"
            tools:visibility="visible" />

        <RadioGroup
            android:id="@+id/addSeriesListingTypeHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/addSeriesEnterSeason"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addSeriesListingTypeText"
            app:layout_constraintTop_toBottomOf="@+id/addSeriesEnterExtras"
            tools:visibility="visible">

            <RadioButton
                android:id="@+id/radioButtonSPlusE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/add_card_listing_type_s_plus_e"
                tools:visibility="invisible" />

            <RadioButton
                android:id="@+id/radioButtonEOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_card_listing_type_e_only"
                tools:visibility="invisible" />

        </RadioGroup>


        <TextView
            android:id="@+id/addSeriesSeasonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/card_edit_season"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/addSeriesEnterSeason"
            app:layout_constraintEnd_toStartOf="@+id/addSeriesEnterSeason"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addSeriesEnterSeason" />


        <EditText
            android:id="@+id/addSeriesEnterSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:hint="@string/enter_season_number"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/addSeriesEnterEpisode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addSeriesSeasonText"
            app:layout_constraintTop_toBottomOf="@+id/addSeriesListingTypeHolder" />

        <TextView
            android:id="@+id/addSeriesEpisodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/card_edit_episode"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/addSeriesEnterEpisode"
            app:layout_constraintEnd_toStartOf="@+id/addSeriesEnterEpisode"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addSeriesEnterEpisode" />


        <EditText
            android:id="@+id/addSeriesEnterEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:hint="@string/enter_episode_number"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/seriesEntityFinishedChipGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addSeriesEpisodeText"
            app:layout_constraintTop_toBottomOf="@+id/addSeriesEnterSeason" />

        <TextView
            android:id="@+id/addSeriesFinishedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/card_edit_finished"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/seriesEntityFinishedChipGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seriesEntityFinishedChipGroup"
            tools:visibility="visible" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/seriesEntityFinishedChipGroup"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/addSeriesAddCardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/addSeriesFinishedText"
            app:layout_constraintTop_toBottomOf="@+id/addSeriesEnterEpisode"
            tools:visibility="invisible">

            <com.google.android.material.chip.Chip
                android:id="@+id/seriesEntityFinishedChip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkable="true" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/addSeriesAddCardButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/card_add_add_card_button"
            android:onClick="@{() -> seriesListEntityViewModel.onClickedButtonAdd()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addSeriesCancelButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seriesEntityFinishedChipGroup" />

        <Button
            android:id="@+id/addSeriesCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/card_add_cancel_button"
            android:onClick="@{() -> seriesListEntityViewModel.onClickedButtonCancel()}"
            app:layout_constraintBottom_toBottomOf="@+id/addSeriesAddCardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addSeriesAddCardButton"
            app:layout_constraintTop_toTopOf="@+id/addSeriesAddCardButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>